# MarinaDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BPlusTree.h  BPlusTree.tpp  BinaryIO.h  CommandHandlers.h  CommandMap.h  CommandType.h  Database.h  Schema.h  Table.h
src/: Database.cpp  Table.cpp  main.cpp
tests/: benchmark_table_index.cpp
